# VRC_facial_tracker

./: .gitignore  README.md  pyproject.toml
docs/: ASSEMBLY.md  PARAMETERS.md
firmware/: platformio.ini  sdkconfig.defaults
firmware/src/: camera.cpp  camera.h  config.h  idf_component.yml  main.cpp  network.cpp  network.h  osc_sender.cpp  osc_sender.h  stream_server.cpp  stream_server.h  tracker.cpp  tracker.h  udp_stream.cpp  udp_stream.h  wifi_manager.cpp  wifi_manager.h
hardware/: README.md
mechanical/: README.md
pc_app/: README.md  __init__.py  __main__.py  requirements.txt
pc_app/src/: __init__.py  debug_tool.py  face_params.py  gui.py  main.py  osc_sender.py  udp_receiver.py
