[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrc-facial-tracker"
version = "1.0.0"
description = "VRChat facial tracking via ESP32 + MediaPipe FaceLandmarker"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Meta-Develop", email = "rikuuyoo@gmail.com"},
]
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "python-osc>=1.8.0",
    "Pillow>=9.0.0",
]

[project.scripts]
vrc-tracker = "pc_app.src.gui:main"
vrc-tracker-cli = "pc_app.src.main:main"

[tool.setuptools.packages.find]
include = ["pc_app*"]
